--- a/www/css/landing-page.css
+++ b/www/css/landing-page.css
@@ -17,7 +17,7 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: "Soleil","Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
 }
 
@@ -26,8 +26,11 @@ h6 {
 }
 
 .lead {
-    font-size: 18px;
-    font-weight: 400;
+    font-family: Lato;
+    font-size:140%;
+    font-weight:300;
+    text-align: justify;
+    line-height: 120%;    
 }
 
 .intro-header {
@@ -47,7 +50,7 @@ h6 {
 
 .intro-message > h1 {
     margin: 0;
-    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
+    /*text-shadow: 2px 2px 3px rgba(0,0,0,0.6);*/
     font-size: 5em;
 }
 
@@ -58,7 +61,7 @@ h6 {
 }
 
 .intro-message > h3 {
-    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
+    /*text-shadow: 2px 2px 3px rgba(0,0,0,0.6);*/
 }
 
 @media(max-width:767px) {
@@ -104,13 +107,18 @@ h6 {
 }
 
 .section-heading {
+    font-family: Lato;
     margin-bottom: 30px;
+    font-weight:700;
+    font-size:280%;
+    letter-spacing:2px;
 }
 
 .section-heading-spacer {
     float: left;
-    width: 200px;
-    border-top: 3px solid #e7e7e7;
+    width: 300px;
+    border-top: 5px solid #e7e7e7;
+    margin-top:0%;
 }
 
 .banner {
@@ -122,7 +130,7 @@ h6 {
 
 .banner h2 {
     margin: 0;
-    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
+    /*text-shadow: 2px 2px 3px rgba(0,0,0,0.6);*/
     font-size: 3em;
 }
 
@@ -145,7 +153,7 @@ h6 {
 @media(max-width:767px) {
     .banner h2 {
         margin: 0;
-        text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
+        /*text-shadow: 2px 2px 3px rgba(0,0,0,0.6);*/
         font-size: 3em;
     }
 
