--- a/www/css/landing-page.css
+++ b/www/css/landing-page.css
@@ -21,6 +21,11 @@ h6 {
     font-weight: 700;
 }
 
+.wireframebg {
+    background: url(../img/wireframe-bg.png) repeat center center;
+    background-position: 0% 12%; 
+}
+
 .topnav {
     font-size: 14px; 
 }
@@ -97,13 +102,14 @@ h6 {
 
 .content-section-a {
     padding: 50px 0;
-    background-color: #f8f8f8;
+    background: transparent;
 }
 
 .content-section-b {
     padding: 50px 0;
     border-top: 1px solid #e7e7e7;
     border-bottom: 1px solid #e7e7e7;
+    background-color: rgba(255,255,255,0.75);
 }
 
 .section-heading {
@@ -123,9 +129,7 @@ h6 {
 
 .banner {
     padding: 100px 0;
-    color: #f8f8f8;
-    background: url(../img/banner-bg.jpg) no-repeat center center;
-    background-size: cover;
+    background-color: rgba(255,255,255,0.75);
 }
 
 .banner h2 {
